most everything completed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2950,13 +2950,13 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: #107ecc;
+  border-color: #107ecc;
 }
 .btn-primary:hover {
   color: #000;
-  background-color: #c77556;
-  border-color: #c46d4c;
+  background-color: #cc1b04;
+  border-color: #cc1b04;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #000;
@@ -4261,7 +4261,7 @@ textarea.form-control-lg {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: lightgray;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
@@ -10947,7 +10947,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #ba0900;
 }
 
 .dev-icons {
